# Game_

./: .gitignore  classes.py  config.py  data.py  giving_birth_func.py  grid_func.py  main.py  main_facade.py  main_functions.py  old_game.py  pyproject.toml  saved_creatures.pkl  update_func.py
colorful_game_of_life/: classes.py  config.py  saved_creatures.pkl
colorful_game_of_life/functions/: giving_birth_func.py  grid_func.py
colorful_game_of_life/main/: main.py  main_facade.py  main_functions.py
core/: automation.py  grid.py
entitles/: characters.py
