[project]
name = "colorful_game_of_life"
version = "0.1.0"
description = "Here, you can choose who will be born. And yes, it's not just a random amount of cells, but living creatures"
authors = [
    {name = "sima-none",email = "sumapakhomova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
